# smoke

./: README.md  smoke_detect.py
chassis of new member/: .mxproject  USART1.ioc
chassis of new member/Core/Inc/: stm32f1xx_it.h
chassis of new member/Core/Src/: can.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
chassis of new member/MDK-ARM/: TIMTASK.c  TIMTASK.h  USART1.uvguix.29839  USART1.uvoptx  USART1.uvprojx  can init.c  can init.h  chassis.c  chassis.h  huidiao.c  huidiao.h  motor.c  motor.h  pid.c  pid.h  startup_stm32f103xb.lst  vofa.c  yaokong.c  yaokong.h
chassis of new member/MDK-ARM/USART1/: USART1.axf  USART1.build_log.htm  USART1.hex  USART1.htm  USART1.lnp  USART1.map  USART1_USART1.dep  can  init.d  can init.crf  can init.d  can init_1.d  can.crf  can.d  chassis.crf  chassis.d  dma.crf  dma.d  gpio.crf  gpio.d  huidiao.crf  huidiao.d  main.crf  main.d  motor.crf  motor.d  pid.crf  pid.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_can.crf  stm32f1xx_hal_can.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  (+33 more)
视觉/: CMakeLists.txt
视觉/control/: debug.yaml  define.h
视觉/drivers/Distortions/: camera_HK.yaml  camera_info_DH1.yaml  camera_info_DH2.yaml  camera_info_HK.yaml  camera_info_MD.yaml
视觉/drivers/Generic/: GenericCamera.h
视觉/drivers/HikVision/config/: camera_config.yaml
视觉/drivers/HikVision/src/: hikvision_camera.cpp
视觉/drivers/HikVision/tool/src/debug/: camera_parms_debug.cpp
视觉/drivers/Mindvision/: CameraDefine.h  CameraStatus.h  MidCamera.h
视觉/include/: constant.h  serial.h  thread.h
视觉/src/: main.cpp  thread.cpp
视觉/src/Camara/: Camara.h
视觉/src/Serial/: SerialPack.cpp  SerialPack.h  SerialTool.cpp  SerialTool.h
视觉/src/yolo11/: common.h  configureFiles.xml  yolov11.cpp  yolov11.h
